--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,10 @@
  *= require_tree .
  *= require_self
  */
+//@import "_custom-variables";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import "1-frameworks";
+@import "2-layouts";
 @import "bootstrap-sprockets";
 @import "bootstrap";
