--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,24 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class = "main">
+      <div class="container-fluid align-self-auto">
+        <div class="col-md-6 mx-auto">
+          <%flash.each do |type, message| %>
+            <div class="text-center alert alert-dismissible mb-0 <%=bootstrap_class_for(type) %>" role="alert">
+              <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
+              <%=message %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+      <div>
+        <%= yield %>
+      </div>
+    </div>
+<!--    <p class="notice"><%#= notice %></p>-->
+<!--    <p class="alert"><%#= alert %></p>-->
 
-    <%= yield %>
+
   </body>
 </html>
