--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -1,5 +1,5 @@
 .card#forms
   = simple_form_for @product, html: { class: 'form' } do |f|
     .card-header
-      h5.header-text = 'Product'
+      h5.header-text = 'New Product'
       = render partial: 'form', locals: { f: f }
