--- a/app/views/shared/_nav_bar_user.html.erb
+++ b/app/views/shared/_nav_bar_user.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="/">E-Dokan</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,29 +7,34 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Category
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <%ProductCategory.all.each do |category| %>
+            <a class="dropdown-item" href="/?category=<%=category.id%>"><%=category.category_name%></a>
+          <%end %>
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link i fa fa-shopping-cart" href="/cart">Cart</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <form class="ml-5 form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <li class="nav-item form-inline active">
+        <%if current_user.present? %>
+          <%=current_user.user_name%>
+          <%=link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link i fa fa-sign-out mr-1 "%>
+        <%else %>
+          <%=link_to "Sign in", new_user_session_path, class: "nav-link i fa fa-sign-inn mr-1 "%>
+        <%end %>
+      </li>
     </form>
+
   </div>
 </nav>
