--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,17 +1,40 @@
-h1 Home#index
-p Find me in app/views/home/index.html.slim
-
-- if current_user.present?
-  - if current_user.image.present?
-    = image_tag current_user.image.url, alt: 'Image'
-  = link_to edit_user_registration_path(current_user), class: "btn btn-info"
-    i.fa.fa-line-chart.mr-1
-    span Edit
-
-  = link_to destroy_user_session_path, method: :delete, class: "btn btn-danger"
-    i.fa.fa-line-chart.mr-1
-    span Sign Out
-- else
-  = link_to new_user_session_path, class: "btn btn-info"
-    i.fa.fa-line-chart.mr-1
-    span Sign in
+header.bg-gray-500.py-5
+  .container.px-4.px-lg-5.my-5
+    .text-center.text-white
+      h1.display-4.fw-bolder
+        | Shop in style
+      p.lead.fw-normal.text-white-50.mb-0
+        | With this shop hompeage template
+section.py-5
+  .container.px-4.px-lg-5.mt-5
+    - if @products.empty?
+      .m-2.text-center = "There is no item"
+    - else
+      .row.gx-4.gx-lg-5.row-cols-2.row-cols-md-3.row-cols-xl-4.justify-content-center
+        - @products.each do |product|
+          .col.m-5
+            .card.p-2.bg-gray-light
+              = image_tag product.image.url
+              .card-body.p-4.bg-gray-200
+                .text-center
+                  h5.fw-bolder.text-dark
+                    = product.name
+                  .d-flex.justify-content-center.small.text-white.mb-2
+                    = link_to "Details", product_details_path(product_id: product.id), class: "text-dark"
+                  .d-flex.justify-content-center.small.text-dark.mb-2
+                    = product.price
+                  .card-footer.p-4.pt-0.border-top-0.bg-transparent
+                    .text-center
+                      = link_to add_to_cart_path(product_id: product), remote: true, class: "add-to-cart btn btn-default"
+                        i.fa.fa-shopping-cart
+                        span Add to cart
+#click.button.btn.btn-primary.d-none[type="button" data-toggle="modal" data-target="#exampleModal"]
+  |  Launch demo modal
+#exampleModal.modal.fade[tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"]
+  .modal-dialog[role="document"]
+    .modal-content
+      .modal-header
+        h5#exampleModalLabel.modal-title
+          #cart_details
+        button.close[type="button" data-dismiss="modal" aria-label="Close"]
+          span[aria-hidden="true"]
