Order with payment system(stripe charge) implemented

--- a/app/views/home/cart.html.slim
+++ b/app/views/home/cart.html.slim
@@ -42,3 +42,7 @@ card#list
               i.fa.fa-trash.mr-2 role='status'
               span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
               span Empty Cart
+            = link_to new_order_path, class: "button btn btn-sm btn-success text-white"
+              i.fa.fa-first-order.mr-2 role='status'
+              span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
+              span Place Order
