Order pay later added, order list added and necessary validations added

--- a/app/assets/stylesheets/1-frameworks/bootstrap/bootstrap.scss
+++ b/app/assets/stylesheets/1-frameworks/bootstrap/bootstrap.scss
@@ -4578,7 +4578,7 @@ input[type="button"].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color: #E5F6DF;
   background-clip: border-box;
   border: 1px solid #c8ced3;
   border-radius: 0.25rem;
