--- a/app/assets/stylesheets/2-layouts/_form.scss
+++ b/app/assets/stylesheets/2-layouts/_form.scss
@@ -7,7 +7,7 @@
     overflow-y: inherit;
   }
   .card-body {
-    background-color: #f0f3f5;
+    background-color: #E5F6DF;
     font-size: 12px;
     .row {
       div{
