--- a/app/views/home/_cart_details.html.slim
+++ b/app/views/home/_cart_details.html.slim
@@ -1,14 +1,17 @@
-.card.p-4
-  table
-    tr
-      td.font-weight-bold.mr-2 = "1 Item is added to your cart!"
-    tr
-      td.font-weight-bold.mr-2 = "Item Details"
-    tr
-      td.font-weight-bold.mr-2 = "Item Name: "
-      td = @product.name
-    tr
-      td.font-weight-bold.mr-2 = "Item Price: "
-      td = @product.price
-    tr
-      = link_to "View Cart", cart_path
+table-responsive
+  table.table.table-sm.text-center
+    thead
+    tbody
+      tr.text-center.font-weight-bold.mr-2
+        td.text-center.font-weight-bold.mr-2 colspan="2" 1 Item is added to your cart!
+      tr.text-center
+        td.font-weight-bold.mr-2 = "Item Name: "
+        td = @product.name
+      tr.text-center
+        td.font-weight-bold.mr-2 = "Item Price: "
+        td = @product.price
+      tr.text-center
+        td colspan = "2"
+          = link_to cart_path, class: "button btn btn-md"
+            i.fa.fa-shopping-cart
+            span View Cart
