--- a/app/views/home/cart.html.slim
+++ b/app/views/home/cart.html.slim
@@ -1,7 +1,7 @@
-card#list
+card#form
   .card-header
     .head
-      span.header-text = 'Products'
+      span.header-text = 'Cart'
       span.card-header-actions
   .card.m-0
     .card-body.p-0
@@ -19,7 +19,7 @@ card#list
                   th Quantity
                   th Unit Price
                   th Total Price
-                  th
+                  th Action
 
               tbody
                 - total_price = 0
@@ -30,19 +30,21 @@ card#list
                     td = item.product.price
                     td = item.product.price * item.quantity
                     - total_price +=  (item.product.price * item.quantity)
-                    td
-                    / td = link_to 'Destroy', product, data: { confirm: 'Are you sure?' }, method: :delete
-
+                    td.text-center
+                      = link_to destroy_cart_item_path(cart_item_id: item), method: :delete
+                        i.fa.fa-trash
             br
-
-            h3
-              = "Total Price: #{total_price}"
-
-            = link_to destroy_cart_path, method: :delete, class:"button btn btn-sm btn-danger text-white"
-              i.fa.fa-trash.mr-2 role='status'
-              span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
-              span Empty Cart
-            = link_to new_order_path, class: "button btn btn-sm btn-success text-white"
-              i.fa.fa-first-order.mr-2 role='status'
-              span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
-              span Place Order
+          .table-responsive
+            .table.table.table-sm.text-center
+              thead
+                tr.text-center
+                  h3
+                    = "Total Price: #{total_price}"
+                  = link_to destroy_cart_path, method: :delete, class:"m-2 button btn btn-sm btn-danger text-white"
+                    i.fa.fa-trash.mr-2 role='status'
+                    span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
+                    span Empty Cart
+                  = link_to new_order_path, class: "m-2 button btn btn-sm btn-success text-white"
+                    i.fa.fa-first-order.mr-2 role='status'
+                    span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
+                    span Place Order
