--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -4,13 +4,13 @@ header.bg-gray-500.py-5
       h1.display-4.fw-bolder
         | Shop in style
       p.lead.fw-normal.text-white-50.mb-0
-        | With this shop hompeage template
+        | With E-Dokan
 section.py-5
-  .container.px-4.px-lg-5.mt-5
+  .container
     - if @products.empty?
       .m-2.text-center = "There is no item"
     - else
-      .row.gx-4.gx-lg-5.row-cols-2.row-cols-md-3.row-cols-xl-4.justify-content-center
+      .row
         - @products.each do |product|
           .col.m-5
             .card.p-2.bg-gray-light
@@ -28,13 +28,5 @@ section.py-5
                       = link_to add_to_cart_path(product_id: product), remote: true, class: "add-to-cart btn btn-default"
                         i.fa.fa-shopping-cart
                         span Add to cart
-#click.button.btn.btn-primary.d-none[type="button" data-toggle="modal" data-target="#exampleModal"]
-  |  Launch demo modal
-#exampleModal.modal.fade[tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"]
-  .modal-dialog[role="document"]
-    .modal-content
-      .modal-header
-        h5#exampleModalLabel.modal-title
-          #cart_details
-        button.close[type="button" data-dismiss="modal" aria-label="Close"]
-          span[aria-hidden="true"]
+
+= render 'added_to_cart_modal'
