--- a/app/views/home/product_details.html.slim
+++ b/app/views/home/product_details.html.slim
@@ -25,6 +25,7 @@
             span
               = number_to_currency @product.price
           .action
-            = link_to add_to_cart_path(product_id: @product), class: "add-to-cart btn btn-default"
+            = link_to add_to_cart_path(product_id: @product), remote: true, class: "add-to-cart btn btn-default"
               i.fa.fa-shopping-cart
-                span Add to cart
+              span Add to cart
+= render 'added_to_cart_modal'
