--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,8 +1,8 @@
 <div class="col-md-6 mx-auto">
   <%flash.each do |type, message| %>
-    <div class="text-center alert alert-dismissible mb-0 <%=bootstrap_class_for(type) %>" role="alert">
-      <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
-      <%=message %>
-    </div>
+    <%tp = 'success' if type == 'notice' %>
+    <%tp = 'warning' if type == 'alert' %>
+    <%tp = 'error' if type == 'error' %>
+    <script>toastr.<%=tp%>('<%=message %>')</script>
   <% end %>
 </div>
