--- a/app/views/orders/new.html.slim
+++ b/app/views/orders/new.html.slim
@@ -1,5 +1,3 @@
-.card#forms
-  = simple_form_for @order, html: { class: 'form' } do |f|
-    .card-header
-      h5.header-text = 'New Order'
-      = render partial: 'form', locals: { f: f }
+= simple_form_for @order, html: { class: 'form' } do |f|
+  h5.header-text.text-center = 'New Order'
+  = render partial: 'form', locals: { f: f }
