--- a/app/views/home/_cart_details.html.slim
+++ b/app/views/home/_cart_details.html.slim
@@ -9,7 +9,7 @@ table-responsive
         td = @product.name
       tr.text-center
         td.font-weight-bold.mr-2 = "Item Price: "
-        td = @product.price
+        td = show_price @product.price
       tr.text-center
         td colspan = "2"
           = link_to cart_path, class: "button btn btn-md"
