--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -22,7 +22,7 @@ section.py-5
                   .d-flex.justify-content-center.small.text-white.mb-2
                     = link_to "Details", product_details_path(product_id: product.id), class: "text-dark"
                   .d-flex.justify-content-center.small.text-dark.mb-2
-                    = product.price
+                    = show_price product.price
                   .card-footer.p-4.pt-0.border-top-0.bg-transparent
                     .text-center
                       = link_to add_to_cart_path(product_id: product), remote: true, class: "add-to-cart btn btn-default"
