Rating for product added

--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -1,7 +1,7 @@
 card#form
   .card-header
     .head
-      span.header-text = 'Cart'
+      span.header-text = 'Your Orders'
       span.card-header-actions
   .card.m-0
     .card-body.p-0
@@ -16,6 +16,7 @@ card#form
               thead
                 tr.text-center
                   th Sl
+                  th Order Number
                   th Order Date
                   th Address
                   th Total Amount
@@ -27,6 +28,7 @@ card#form
                 - @orders.each_with_index do |order, idx|
                   tr.shadow-style.clickable-row
                     td = idx+1
+                    td = link_to order.order_number, order
                     td = order.created_at
                     td = order.address
                     td = number_to_currency order.total_amount
@@ -36,8 +38,8 @@ card#form
                     - else
                       td
                     - if order.Unpaid?
-                      td
-                        = link_to "Cancel", cancel_order_path(order), method: :delete, class: "button btn btn-sm btn secondary"
+                      td.d-flex
+                        = link_to "Cancel", order, method: :delete, class: "button btn btn-sm btn secondary"
                         = link_to "Pay Now", payment_order_path(order), class: "button btn btn-sm btn secondary"
                     - else
                       td
