--- a/app/views/home/product_details.html.slim
+++ b/app/views/home/product_details.html.slim
@@ -11,13 +11,12 @@
             = @product.name
           .rating
             .stars
-              span.fa.fa-star.checked
-              span.fa.fa-star.checked
-              span.fa.fa-star.checked
-              span.fa.fa-star
-              span.fa.fa-star
-            span.review-no
-              | 41 reviews
+              - rating = @product.current_rating.to_i
+              - rating.times do
+                span.fa.fa-star.checked
+              - (5-rating).times do
+                span.fa.fa-star
+            span.review-no = link_to "#{pluralize @product.rating_count, 'review', 'reviews'}", new_rating_path(product_id: @product.id)
           p.product-description
             = @product.description
           h4.price
@@ -28,4 +27,7 @@
             = link_to add_to_cart_path(product_id: @product), remote: true, class: "add-to-cart btn btn-default"
               i.fa.fa-shopping-cart
               span Add to cart
+              = link_to new_rating_path(product_id: @product), class: "add-to-cart btn btn-default"
+                i.fa.fa-plus-circle-cart
+                span Ratings
 = render 'added_to_cart_modal'
