--- a/app/views/shared/_nav_bar_user.html.erb
+++ b/app/views/shared/_nav_bar_user.html.erb
@@ -6,7 +6,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
@@ -28,7 +28,7 @@
         <%end %>
       </li>
     </ul>
-    <form class="ml-5 form-inline my-2 my-lg-0">
+    <form action="/" class="ml-5 form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" name="search_product" type="search" placeholder="Search product" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       <li class="nav-item form-inline active">
