--- a/app/views/shared/_nav_bar_user.html.erb
+++ b/app/views/shared/_nav_bar_user.html.erb
@@ -33,7 +33,7 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       <li class="nav-item form-inline active">
         <%if current_user.present? %>
-          <%=current_user.user_name%>
+          <%= link_to current_user.user_name, user_profile_path(current_user)%>
           <%=link_to "Sign out", destroy_user_session_path, method: :delete, class: "nav-link i fa fa-sign-out mr-1 "%>
         <%else %>
           <%=link_to "Sign in", new_user_session_path, class: "nav-link i fa fa-sign-inn mr-1 "%>
