--- a/app/views/ratings/new.html.slim
+++ b/app/views/ratings/new.html.slim
@@ -9,20 +9,26 @@ card#form
       .show-list
         .text-center
           = "Rating of "
-          = link_to "#{@product.name}", product_details_path(product_id: @product)
+          = link_to "#{@product.name}", product_details_path(product_id: @product), method: :get
         - if current_user.present?
-          = simple_form_for @rating, html: {class: 'form'} do |f|
+          = simple_form_for @rating, html: {class: 'form rating_form'} do |f|
             = render partial: 'form', locals: {f: f}
         - else
           .m-2.text-center Sign in to Rate
           .m-2.text-center = link_to "Sign In", new_user_session_path
         - if @ratings.empty?
           .m-2.text-center No Rating for this product
-          .m-2.text-center = link_to "Back to Product", product_details_path(@product)
+          .m-2.text-center = link_to "Back to Product", product_details_path(@product), method: :get
         - else
           .text-center
             - @ratings.each do |rating|
               h3 = link_to rating.user.user_name, user_profile_path(rating.user)
-              p = "Rating: #{rating.rating}"
+              .rating
+                .stars
+                  - rat = rating.rating.to_i
+                  - rat.times do
+                    span.fa.fa-star.checked
+                  - (5 - rat).times do
+                    span.fa.fa-star
               p = "Description:"
               = text_area_tag '', "#{rating.message}",cols: "50",  disabled: true
