--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -38,14 +38,18 @@
         </div>
       </div>
       <hr>
-      <div class="row">
-        <div class="col-sm-3">
-          <h6 class="mb-0">Mobile</h6>
+      <%if current_user.present? && @user == current_user %>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0">Mobile</h6>
+          </div>
+
+            <div class="col-sm-9">
+              +880 <%=@user.contact_number%>
+            </div>
+
         </div>
-        <div class="col-sm-9">
-          +880 <%=@user.contact_number%>
-        </div>
-      </div>
+      <%end %>
     </div>
   </div>
 </div>
