--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -20,12 +20,12 @@ section.py-5
                   h5.fw-bolder.text-dark
                     = product.name
                   .d-flex.justify-content-center.small.text-white.mb-2
-                    = link_to "Details", product_details_path(product_id: product.id), class: "text-dark"
+                    = link_to "Details", product_details_path(product_id: product.id), method: :get, class: "text-dark"
                   .d-flex.justify-content-center.small.text-dark.mb-2
                     = show_price product.price
                   .card-footer.p-4.pt-0.border-top-0.bg-transparent
                     .text-center
-                      = link_to add_to_cart_path(product_id: product), remote: true, class: "add-to-cart btn btn-default"
+                      = link_to add_to_cart_path(product_id: product, quantity: 1), remote: true, class: "add-to-cart btn btn-default"
                         i.fa.fa-shopping-cart
                         span Add to cart
 
