--- a/app/views/home/product_details.html.slim
+++ b/app/views/home/product_details.html.slim
@@ -16,7 +16,7 @@
                 span.fa.fa-star.checked
               - (5-rating).times do
                 span.fa.fa-star
-            span.review-no = link_to "#{pluralize @product.rating_count, 'review', 'reviews'}", new_rating_path(product_id: @product.id)
+            span.review-no = link_to "#{pluralize @product.rating_count, 'review', 'reviews'} | write a review", new_rating_path(product_id: @product.id), method: :get
           p.product-description
             = @product.description
           h4.price
@@ -24,10 +24,13 @@
             span
               = show_price @product.price
           .action
-            = link_to add_to_cart_path(product_id: @product), remote: true, class: "add-to-cart btn btn-default"
-              i.fa.fa-shopping-cart
-              span Add to cart
-              = link_to new_rating_path(product_id: @product), class: "add-to-cart btn btn-default"
-                i.fa.fa-plus-circle-cart
-                span Ratings
+            .number.mb-2
+              = form_with url: add_to_cart_path, method: :get, remote: true, class: "increase_quantity"
+              span.minus.border.border-dark.border-1.p-2.m-2.btn.btn-secondary -
+              = text_field_tag 'quantity', 1, class: 'form-control-sm quantity', style:'height:30px; font-size:10px; width:30px'
+              = hidden_field_tag('product_id', value="#{@product.id}")
+              span.plus.border.border-dark.border-1.p-2.m-2.btn.btn-secondary +
+              = button_tag type: 'submit', class: "add-to-cart btn btn-default"
+                i.fa.fa-shopping-cart
+                span Add to cart
 = render 'added_to_cart_modal'
