--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,19 @@
   </head>
 
   <body>
-  <%if current_user.present? && current_user.is_admin? %>
-    <%=render 'shared/nav_bar_admin' %>
-  <%else %>
-    <%=render 'shared/nav_bar_user' %>
-  <%end %>
+    <%if current_user.present? && current_user.is_admin? %>
+      <%=render 'shared/nav_bar_admin' %>
+    <%else %>
+      <%=render 'shared/nav_bar_user' %>
+    <%end %>
     <div class = "main">
       <%= render "layouts/flash" %>
-      <div class="container-fluid align-self-auto">
-        <div>
+      <div class="container-fluid align-self-auto mb-lg-5 mb-lg-5">
+        <div class="mb-lg-5">
           <%= yield %>
         </div>
       </div>
     </div>
+    <%= render "shared/footer" %>
   </body>
 </html>
