--- a/app/views/shared/_nav_bar_admin.html.erb
+++ b/app/views/shared/_nav_bar_admin.html.erb
@@ -16,10 +16,13 @@
         <a class="nav-link" href="/products">Products</a>
       </li>
     </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <%=link_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-danger i fa fa-sign-out mr-1 "%>
-      </li>
-    </ul>
   </div>
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <%=link_to current_user.user_name, user_profile_path(current_user), class: "btn btn-info text-dark i fa fa-user mr-2 p-1"%>
+    </li>
+    <li class="nav-item active">
+      <%=link_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-danger text-white i fa fa-sign-out p-1"%>
+    </li>
+  </ul>
 </nav>
