--- a/app/assets/stylesheets/2-layouts/_list.scss
+++ b/app/assets/stylesheets/2-layouts/_list.scss
@@ -12,7 +12,7 @@
       color: white;
     }
   }
-  .card{
+  .card {
     .card-body {
       .filter-section {
 
@@ -26,39 +26,45 @@
               background: #8080801a;
             }
           }
+
           //text-align: center;
           font-size: 14px;
           @media screen and (max-width: 1199px) {
             font-size: 100%;
           }
-          img{
+
+          img {
             max-height: 40px;
           }
+
           thead {
             background: #3276be;
             color: white;
           }
-          tbody{
+
+          tbody {
             color: #40484f;
+
             tr.shadow-style {
               background-color: #ffffff;
-              box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+              box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
               border-radius: 10px;
+
               td {
                 border-top: none;
                 padding: 15px 2px 15px 2px;
                 border-right: 1px #8080801a solid;
               }
             }
+
             white-space: nowrap;
-            .actions{
+
+            .actions {
               white-space: nowrap;
             }
           }
-          .raw-material-status-col {
-            width: 175px;
-          }
         }
+
         .actions {
           text-align: center;
           @media screen and (max-width: 1199px) {
@@ -66,181 +72,10 @@
               font-size: 100%;
             }
           }
+
           i {
             padding-left: 8px;
           }
-        }
-      }
-    }
-
-    .report-card-row {
-      margin: 5px;
-      display: flex;
-      justify-content: center;
-      align-content: space-between;
-      flex-wrap: wrap;
-
-      .button:hover {
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      }
-
-      a {
-        height: 180px;
-        width: 180px;
-        display: flex;
-        align-items: center;
-        flex: 1 0 12%;
-        margin: 5px;
-
-        .report-card {
-          width: 100%;
-          display: flex;
-          align-items: center;
-          flex-direction: column;
-
-          .details {
-            font-size: 12px;
-          }
-        }
-      }
-    }
-  }
-
-  .filter-label {
-    .input-group-text {
-      background-color: #f0f3f5;
-      color: black;
-      border-left: 1px #2865b87a solid;
-      border-top: 1px #2865b87a solid;
-      border-bottom: 1px #2865b87a solid;
-      width: 100%;
-    }
-  }
-
-  .ajax-datatable {
-    tbody {
-      tr {
-        &:hover {
-          background: #8080801a;
-        }
-        background-color: #ffffff;
-        box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
-        border-radius: 10px;
-        td {
-          border-top: none;
-          padding: 15px 2px 15px 2px;
-          border-right: 1px #8080801a solid;
-        }
-      }
-    }
-  }
-
-  .supplier-customer-index-table {
-    tbody {
-      tr {
-        td {
-          &:nth-child(1) {
-            text-align: center;
-          }
-          &:nth-child(4) {
-            text-align: center;
-          }
-          &:nth-child(7) {
-            text-align: center;
-          }
-          &:nth-child(8) {
-            text-align: center;
-          }
-        }
-      }
-    }
-  }
-
-  .sale-index-table {
-    tbody {
-      tr {
-        td {
-          &:nth-child(1) {
-            text-align: center;
-          }
-          &:nth-child(4) {
-            text-align: center;
-          }
-          &:nth-child(7) {
-            text-align: center;
-          }
-          &:nth-child(8) {
-            text-align: center;
-          }
-        }
-      }
-    }
-  }
-
-  .purchase-index-table {
-    tbody {
-      tr {
-        td {
-          &:nth-child(1) {
-            text-align: center;
-          }
-          &:nth-child(4) {
-            text-align: center;
-          }
-          &:nth-child(7) {
-            text-align: center;
-          }
-          &:nth-child(8) {
-            text-align: center;
-          }
-        }
-      }
-    }
-  }
-
-  .item-index-table {
-    tr {
-      td {
-        &:nth-child(1) {
-          text-align: center;
-        }
-        &:nth-child(2) {
-          padding-left: 5px;
-          padding-right: 5px;
-        }
-        &:nth-child(4) {
-          text-align: center;
-        }
-        &:nth-child(6) {
-          text-align: center;
-        }
-        &:nth-child(7) {
-          text-align: center;
-        }
-      }
-    }
-  }
-
-  .bom-index-table {
-    tr {
-      td {
-        &:nth-child(1) {
-          text-align: center;
-        }
-        &:nth-child(2) {
-          text-align: center;
-        }
-        &:nth-child(5) {
-          text-align: right;
-        }
-        &:nth-child(6) {
-          text-align: center;
-        }
-        &:nth-child(7) {
-          text-align: center;
-        }
-        &:nth-child(8) {
-          text-align: center;
         }
       }
     }
