--- a/app/views/admin_home/product_reviews.html.slim
+++ b/app/views/admin_home/product_reviews.html.slim
@@ -2,10 +2,11 @@ card#form
   .card-header
     .head
       span.card-header-actions
+
   .card.m-0
     .card-body.p-0
       .filter-section
-
+        = link_to "Back", :back , class:"btn btn-secondary text-dark i fa fa-backward", style:"margin:5px"
       .show-list
         .text-center
           = "Rating of "
