--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,8 @@
         </div>
       </div>
     </div>
-    <%= render "shared/footer" %>
+    <% unless current_user&.is_admin? %>
+      <%= render "shared/footer" %>
+    <%end %>
   </body>
 </html>
