--- a/app/views/product_categories/_form.html.slim
+++ b/app/views/product_categories/_form.html.slim
@@ -1,12 +1,27 @@
-= form_for @product_category do |f|
+.card#forms
   - if @product_category.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@product_category.errors.count, "error")} prohibited this product_category from being saved:"
-      ul
+    .card-header.ul-padding-left.bg-danger
+      = f.error_notification.html_safe
+      ul.alert.alert-danger
         - @product_category.errors.full_messages.each do |message|
           li = message
+  .card-body
+    .row.pl-0
+      .col-md-12
+        fieldset.form-group
+          .row
+            .col-md-4
+              label Category Name
+              span.req-field title="required" *
+            .col-md-7
+              = f.text_field :category_name, class: 'form-control form-control-sm'
+          = button_tag type: 'submit', class: 'button btn btn-sm btn-primary submit-button'
+            i class = " #{ @product_category.persisted? ? 'icon-arrow-up-circle' : 'icon-doc'} icons mt-0 mr-2" role="status"
+            span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
+            span = @product_category.persisted? ? "Update" : 'Save'
 
-  .field
-    = f.label :category_name
-    = f.text_field :category_name
-  .actions = f.submit
+          = link_to product_categories_path,
+                  class: 'button btn btn-sm btn-secondary ml-2 loader-button'
+            i.fa.fa-close.mr-2 role="status"
+            span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
+            span Discard
