--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -27,3 +27,4 @@
             = link_to edit_product_path, class: "add-to-cart btn btn-default"
               i.fa.fa-pencil
               span Edit
+            = link_to "Back", :back , class:"btn btn-secondary text-dark i fa fa-backward", style:"margin:5px"
