--- a/app/views/shared/_nav_bar_admin.html.erb
+++ b/app/views/shared/_nav_bar_admin.html.erb
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/products">Products</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/manage_orders">Orders</a>
+      </li>
     </ul>
   </div>
   <ul class="navbar-nav">
