--- a/app/views/home/cart.html.slim
+++ b/app/views/home/cart.html.slim
@@ -14,7 +14,7 @@ card#form
           .m-2.text-center = link_to "View Products", root_path
         - else
           .table-responsive
-            table.table.table-sm#dataTable_no_ajax_with_number
+            table.table.table-sm
               thead
                 tr.text-center
                   th Product Name
