--- a/app/views/product_categories/edit.html.slim
+++ b/app/views/product_categories/edit.html.slim
@@ -1,8 +1,4 @@
-h1 Editing product_category
-
-== render 'form'
-
-=> link_to 'Show', @product_category
-'|
-=< link_to 'Back', product_categories_path
+= simple_form_for @product_category, html: { class: 'form' } do |f|
+  h5.header-text = 'Edit Category Name'
+  = render partial: 'form', locals: { f: f }
 
