--- a/app/views/product_categories/index.html.slim
+++ b/app/views/product_categories/index.html.slim
@@ -1,21 +1,30 @@
-h1 Listing product_categories
+card#form
+  .card-header
+    .head
+      span.header-text = 'Product Category'
+      span.card-header-actions
+  .card.m-0
+    .card-body.p-0
+      .filter-section
+        = link_to new_product_category_path, class: "button btn btn-sm btn-info text-dark"
+          i.fa.fa-plus.mr-2 role='status'
+          span Add new
+      .show-list
+        - unless @product_categories.present?
+          .m-2.text-center = "There is no item"
+        - else
+          .table-responsive
+            table.table.table-sm
+              thead
+                tr.text-center
+                  th.text-center Product category Name
+                  th
+                  th
+              tbody
+                - @product_categories.each do |product_category|
+                  tr.shadow-style.clickable-row
+                    td.text-center = product_category.category_name
+                    td = link_to 'Edit', edit_product_category_path(product_category)
+                    td = link_to 'Destroy', product_category, data: { confirm: 'Are you sure?' }, method: :delete
 
-table
-  thead
-    tr
-      th Category name
-      th
-      th
-      th
-
-  tbody
-    - @product_categories.each do |product_category|
-      tr
-        td = product_category.category_name
-        td = link_to 'Show', product_category
-        td = link_to 'Edit', edit_product_category_path(product_category)
-        td = link_to 'Destroy', product_category, data: { confirm: 'Are you sure?' }, method: :delete
-
-br
-
-= link_to 'New Product category', new_product_category_path
+            br
