--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -6,16 +6,15 @@ card#form
   .card.m-0
     .card-body.p-0
       .filter-section
-        = link_to new_product_path, class: "button btn btn-sm btn-primary text-white"
+        = link_to new_product_path, class: "button btn btn-sm btn-info text-dark"
           i.fa.fa-plus.mr-2 role='status'
-          span.spinner-border.spinner-border-sm.mr-2.d-none aria-hidden="true" role="status"
           span Add new
       .show-list
         - unless @products.present?
           .m-2.text-center = "There is no item"
         - else
           .table-responsive
-            table.table.table-sm#dataTable_no_ajax_with_number
+            table.table.table-sm
               thead
                 tr.text-center
                   th Product category
